# commonplace

./: .editorconfig  .gitignore  Untitled Diagram.drawio  hugo.yaml  pyproject.toml
archetypes/: notecards.md
content/authors/john-c.-bogle/: _index.md
content/authors/morgan-housel/: _index.md
content/authors/thomas-j.-stanley/: _index.md
content/notecards/: 202503060957.md  202503061002.md  202503061359.md  202503061402.md  202503061408.md  202503061409.md  202503061411.md  202503061413.md  202503061416.md  202503061417.md  202503061419.md  202503061421.md  202503061422.md  20250317082539.md  20250317153218.md  20250317153436.md  20250317153546.md  20250317153609.md  20250317153635.md  20250317153658.md  20250317153720.md  20250317153740.md  20250317153802.md  20250317153829.md  20250317153913.md  20250317153924.md  20250317153945.md  20250317154007.md  20250317154031.md  20250317154053.md  20250317154122.md  20250317154148.md  20250317154229.md  20250317154247.md  20250318091219.md  20250318091342.md  20250318091718.md  20250318091746.md  20250318091903.md  20250318091929.md  (+58 more)
content/quotes/: 202503031229.md  202503060957.md  202503061002.md  202503061359.md  202503061400.md  202503061402.md  202503061406.md  202503061407.md  202503061408.md  202503061409.md  202503061410.md  202503061411.md  202503061412.md  202503061413.md  202503061415.md  202503061416.md  202503061417.md  202503061419.md  202503061420.md  202503061421.md  202503061422.md
content/sources/the-next-millionaire-next-door/: _index.md
content/sources/the-psychology-of-money/: _index.md
content/themes/life/: _index.md
content/themes/psychology/: _index.md
content/themes/stoicism/: _index.md
content/themes/strategy/: _index.md
themes/commonplace-theme/: theme.yaml
themes/commonplace-theme/assets/css/: main.css
themes/commonplace-theme/layouts/_default/: baseof.html  home.html  list.html  single.html
themes/commonplace-theme/layouts/notecards/: notecard.html
themes/commonplace-theme/layouts/partials/: breadcrumbs.html  head.html  notecard.html  pagination.html  tags.html  taxonomies.html  taxonomy-group-list.html  taxonomy-link-list.html  taxonomy-tag-list.html
themes/commonplace-theme/layouts/quotes/: quote.html
themes/commonplace-theme/layouts/taxonomy/: taxonomy.html  terms.html
